# fastapi-ddd-sample

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SKILL.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
src/: main.py
src/adapters/agent/: langgraph_chat_agent.py
src/adapters/http/: chat_router.py  goal_router.py  task_router.py
src/application/chat/: chat_service.py  send_message.py
src/application/goal/: add_task_to_goal.py  create_goal.py  get_goal.py  list_goals.py
src/application/shared/: use_case.py
src/application/task/: create_task.py  get_task.py  list_tasks.py  list_tasks_by_goal.py  update_task_status.py
src/domain/: entity_id.py
src/domain/goal/: entity.py  exceptions.py  repository.py  value_objects.py
src/domain/task/: entity.py  exceptions.py  repository.py  value_objects.py
src/infrastructure/agent/: graph.py  state.py
src/infrastructure/config/: di.py
src/infrastructure/http/: task_router.py
src/infrastructure/persistence/: in_memory_goal_repository.py  in_memory_task_repository.py
tests/: conftest.py
tests/application/chat/: test_send_message.py
tests/application/goal/: test_add_task_to_goal.py  test_create_goal.py  test_get_goal.py  test_list_goals.py
tests/application/task/: test_create_task.py  test_get_task.py  test_list_tasks.py  test_list_tasks_by_goal.py  test_update_task_status.py
tests/domain/goal/: test_entity.py  test_value_objects.py
tests/domain/task/: test_entity.py  test_value_objects.py
tests/infrastructure/agent/: test_graph.py
(+14 files in other folders)
